# notebooklm-mcp

./: .codecov.yml  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  Taskfile.yml  ci-test.md  demo_autogen_integration.py  demo_mcp_client.py  demo_mcp_tools.py  docker-compose.yml  mcp-config.json  notebooklm-config.example.json  pyproject.toml  pytest.ini  requirements.txt  test_live_mcp.py  test_mcp_integration.py  test_trigger.md
.github/: copilot-instructions.md
.github/workflows/: auto-release.yml  release.yml  test.yml
docs/: README_old.md  TRANSFORMATION_COMPLETE.md  auto-release-workflow.md  docker-deployment.md  fastmcp-v2-guide.md  github-copilot-integration.md  http-server-guide.md  quick-setup-guide-simple.md  quick-setup-guide.md  uv-setup-guide.md
examples/: basic_chat.py  config.json  copilot_integration.py  fastmcp_client_example.py  mcp_integration.py  test_autogen.py
examples/old_demos/: example_cookies.json  export_cookies_guide.md  notebooklm_cookies_guide.md
legacy/: demo.py  extract_cookies.py  persistent_session.py  test_chat.py  test_integration.py  test_simple.py  test_streaming.py  test_undetected.py
src/notebooklm_mcp/: __init__.py  cli.py  client.py  config.py  exceptions.py  monitoring.py  py.typed  security.py  server.py  server_new.py  server_old.py
tests/: conftest.py  test_cli.py  test_cli_comprehensive.py  test_client.py  test_client_comprehensive.py  test_comprehensive_simple.py  test_config.py  test_config_real.py  test_exceptions.py  test_fastmcp_comprehensive.py  test_fixtures.py  test_http_client.py  test_integration.py  test_monitoring.py  test_package.py  test_proper_client.py  test_security.py  test_server.py  test_server_comprehensive.py
